--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
+sudo: required
 language: java
-jdk:
-  - openjdk8
+services:
+  - docker
 cache:
   directories:
-    - $HOME/.m2
-
+    - "$HOME/.m2"
 install: true
-
-script:
-  - travis_wait 30 ./mvnw clean install -DskipTests=false
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+jobs:
+  include:
+    - stage: Compilation and Installation
+      script: scripts/travis.sh install
+    - stage: Deploy on
+      script: if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then bash scripts/travis.sh deploy;
+        fi
