--- a/spring-cloud-servicecomb-sample/price-provider/pom.xml
+++ b/spring-cloud-servicecomb-sample/price-provider/pom.xml
@@ -42,6 +42,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-commons</artifactId>
       <version>2.1.2.RELEASE</version>
