--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-servicecomb-discovery/pom.xml
@@ -19,42 +19,17 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-servicecomb-sample</artifactId>
-    <groupId>org.springframework.cloud.huawei</groupId>
+    <artifactId>spring-cloud-starter-huawei</artifactId>
+    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
-  <artifactId>price-provider</artifactId>
-
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
+  <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-commons</artifactId>
-      <version>2.1.2.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud.huawei</groupId>
-      <artifactId>spring-cloud-servicecomb-discovery</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <scope>compile</scope>
+      <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
     </dependency>
   </dependencies>
 </project>
