--- a/spring-cloud-huawei-sample/order-consumer/pom.xml
+++ b/spring-cloud-huawei-sample/order-consumer/pom.xml
@@ -19,19 +19,35 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei</artifactId>
-    <groupId>org.springframework.cloud.huawei</groupId>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-cloud-starter-servicecomb-discovery</artifactId>
-
+  <artifactId>order-consumer</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
   <dependencies>
     <dependency>
-      <groupId>org.springframework.cloud.huawei</groupId>
-      <artifactId>spring-cloud-servicecomb-discovery</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-commons</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
     </dependency>
   </dependencies>
 </project>
