--- a/spring-cloud-huawei-sample/price-provider/pom.xml
+++ b/spring-cloud-huawei-sample/price-provider/pom.xml
@@ -19,14 +19,14 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-servicecomb-sample</artifactId>
-    <groupId>org.springframework.cloud.huawei</groupId>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>product-consumer-feign</artifactId>
-
+  <artifactId>price-provider</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   <properties>
     <java.version>1.8</java.version>
   </properties>
@@ -42,25 +42,17 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-commons</artifactId>
       <version>2.1.2.RELEASE</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud.huawei</groupId>
-      <artifactId>spring-cloud-starter-servicecomb-discovery</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-      <version>2.1.2.RELEASE</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
-      <version>2.1.2.RELEASE</version>
+      <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
     </dependency>
   </dependencies>
 </project>
