--- a/spring-cloud-huawei-sample/product-consumer-feign/pom.xml
+++ b/spring-cloud-huawei-sample/product-consumer-feign/pom.xml
@@ -19,13 +19,14 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-servicecomb-sample</artifactId>
-    <groupId>org.springframework.cloud.huawei</groupId>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>order-consumer</artifactId>
+  <artifactId>product-consumer-feign</artifactId>
+
   <properties>
     <java.version>1.8</java.version>
   </properties>
@@ -46,10 +47,19 @@
       <version>2.1.2.RELEASE</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud.huawei</groupId>
-      <artifactId>spring-cloud-servicecomb-discovery</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <scope>compile</scope>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>2.1.2.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
