add dtm structure

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <module>spring-cloud-huawei-servicecomb-discovery</module>
     <module>spring-cloud-huawei-sample</module>
     <module>spring-cloud-starter-huawei</module>
+    <module>spring-cloud-huawei-dtm</module>
   </modules>
 
 
