--- a/spring-cloud-huawei-dtm/pom.xml
+++ b/spring-cloud-huawei-dtm/pom.xml
@@ -6,14 +6,10 @@
     <artifactId>spring-cloud-huawei</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-  <artifactId>spring-cloud-starter-huawei</artifactId>
-  <modules>
-    <module>spring-cloud-starter-huawei-servicecomb-discovery</module>
-    <module>spring-cloud-starter-huawei-dtm</module>
-  </modules>
+
+  <artifactId>spring-cloud-huawei-dtm</artifactId>
+
 
 </project>
