--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-dtm/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-dtm/pom.xml
@@ -3,17 +3,18 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei</artifactId>
+    <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-  <artifactId>spring-cloud-starter-huawei</artifactId>
-  <modules>
-    <module>spring-cloud-starter-huawei-servicecomb-discovery</module>
-    <module>spring-cloud-starter-huawei-dtm</module>
-  </modules>
+
+  <artifactId>spring-cloud-starter-huawei-dtm</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-huawei-dtm</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
