--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -36,7 +36,8 @@
     <jackson-databind.version>2.9.9.2</jackson-databind.version>
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
-    <servicecomb.version>1.2.0</servicecomb.version>
+    <servicecomb.version>1.2.1</servicecomb.version>
+    <foundation-auth.version>2.3.69</foundation-auth.version>
   </properties>
 
   <dependencies>
@@ -71,9 +72,9 @@
       <version>${jackson-databind.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.servicecomb</groupId>
-      <artifactId>foundation-common</artifactId>
-      <version>${servicecomb.version}</version>
+      <groupId>com.huawei.paas.cse</groupId>
+      <artifactId>foundation-auth</artifactId>
+      <version>${foundation-auth.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jmockit</groupId>
@@ -91,6 +92,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.servicecomb</groupId>
+      <artifactId>transport-rest-client</artifactId>
+      <version>1.2.1</version>
     </dependency>
   </dependencies>
 </project>
