--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <jackson-databind.version>2.9.9.2</jackson-databind.version>
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
-    <servicecomb.version>1.2.0</servicecomb.version>
+    <cse-dependency.version>2.3.69</cse-dependency.version>
   </properties>
   <modules>
     <module>spring-cloud-huawei-dependencies</module>
@@ -87,7 +87,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
+      <dependency>
+        <groupId>com.huawei.paas.cse</groupId>
+        <artifactId>foundation-auth</artifactId>
+        <version>${cse-dependency.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -138,4 +142,21 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>cse</id>
+      <repositories>
+        <repository>
+          <id>HuaweiCloudSDK</id>
+          <url>https://mirrors.huaweicloud.com/repository/maven/huaweicloudsdk/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+  </profiles>
 </project>
