--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -73,7 +73,6 @@
     <dependency>
       <groupId>com.huawei.paas.cse</groupId>
       <artifactId>foundation-auth</artifactId>
-      <version>2.3.69</version>
     </dependency>
     <dependency>
       <groupId>org.apache.servicecomb</groupId>
@@ -98,4 +97,34 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>cse</id>
+      <repositories>
+        <repository>
+          <id>HuaweiCloudSDK</id>
+          <url>https://mirrors.huaweicloud.com/repository/maven/huaweicloudsdk/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>HuaweiCloudSDK</id>
+          <url>https://mirrors.huaweicloud.com/repository/maven/huaweicloudsdk/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </pluginRepository>
+      </pluginRepositories>
+    </profile>
+  </profiles>
 </project>
