--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jobs:
   include:
     - stage: findbugs
       script:
+        - cp .travis.settings.xml $HOME/.m2/settings.xml
         - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .travis.settings.xml
     - stage: install
       script:
