--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: java
 jdk:
   - openjdk8
 
+deploy:
+  provider: script
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  skip_cleanup: true
+  on:
+    tags: true
+
 jobs:
   include:
     - stage: findbugs
