--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,8 @@ language: java
 jdk:
   - openjdk8
 
-deploy:
-  provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
-  skip_cleanup: true
-  on:
-    tags: true
+before_install:
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
 
 jobs:
   include:
