--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,17 @@ language: java
 jdk:
   - openjdk8
 
+before_install:
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
+
 jobs:
   include:
     - stage: findbugs
       script:
-        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true
+        - cp .travis.settings.xml $HOME/.m2/settings.xml
+        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .travis.settings.xml
     - stage: install
       script:
-        - mvn install -Dmaven.javadoc.skip=true
+        - mvn install -Dmaven.javadoc.skip=true --settings .travis.settings.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
