--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 jdk:
   - openjdk8
 
+cache:
+  directories:
+    - "$HOME/.m2"
+
 before_install:
   - cp .travis.settings.xml $HOME/.m2/settings.xml
 
