--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 jdk:
   - openjdk8
 
+cache:
+  directories:
+    - "$HOME/.m2"
+
 before_install:
   - cp .travis.settings.xml $HOME/.m2/settings.xml
 
@@ -10,7 +14,6 @@ jobs:
   include:
     - stage: findbugs
       script:
-        - cp .travis.settings.xml $HOME/.m2/settings.xml
         - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .travis.settings.xml
     - stage: install
       script:
