--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - "$HOME/.m2"
 
 before_install:
-  - cp .travis.settings.xml $HOME/.m2/settings.xml
+  - cp .maven.settings.xml $HOME/.m2/settings.xml
 
 jobs:
   include:
