--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ jobs:
   include:
     - stage: findbugs
       script:
-        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .travis.settings.xml
+        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .maven.settings.xml
     - stage: install
       script:
-        - mvn install -Dmaven.javadoc.skip=true --settings .travis.settings.xml
+        - mvn install -Dmaven.javadoc.skip=true --settings .maven.settings.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
