--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ cache:
     - "$HOME/.m2"
 
 before_install:
-  - cp .travis.settings.xml $HOME/.m2/settings.xml
+  - cp .maven.settings.xml $HOME/.m2/settings.xml
 
 jobs:
   include:
     - stage: findbugs
       script:
-        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .travis.settings.xml
+        - mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true --settings .maven.settings.xml
     - stage: install
       script:
-        - mvn install -Dmaven.javadoc.skip=true --settings .travis.settings.xml
+        - mvn install -Dmaven.javadoc.skip=true --settings .maven.settings.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
