--- a/spring-cloud-huawei-dtm/pom.xml
+++ b/spring-cloud-huawei-dtm/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>5.2.0.M3</version>
+      <version>5.1.8.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
