use spring.application.name if no spring.cloud.servicecomb.serviceName

--- a/spring-cloud-huawei-sample/order-consumer/src/main/resources/application.yml
+++ b/spring-cloud-huawei-sample/order-consumer/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: spring-cloud-servicecomb
+    name: order
   cloud:
     servicecomb:
       discovery:
