--- a/spring-cloud-huawei-sample/product-consumer-feign/src/main/resources/application.yml
+++ b/spring-cloud-huawei-sample/product-consumer-feign/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: spring-cloud-servicecomb
+    name: product
   cloud:
     servicecomb:
       discovery:
