--- a/spring-cloud-huawei-sample/price-provider/src/main/resources/application.yml
+++ b/spring-cloud-huawei-sample/price-provider/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 
 spring:
   application:
-    name: spring-cloud-servicecomb
+    name: price
   cloud:
     servicecomb:
       discovery:
         enabled: true
         address: http://127.0.0.1:30300
-        serviceName: price
+        #serviceName: price
         version: 0.0.1
         healthCheckInterval: 30
         autoDiscovery: true
