--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
     <cse-dependency.version>2.3.69</cse-dependency.version>
-    <spring-web.version>5.1.8.RELEASE</spring-web.version>
+    <spring.version>5.1.8.RELEASE</spring.version>
   </properties>
   <modules>
     <module>spring-cloud-huawei-dependencies</module>
@@ -96,7 +96,12 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
-        <version>${spring-web.version}</version>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
