--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
     <cse-dependency.version>2.3.69</cse-dependency.version>
+    <spring.version>5.1.8.RELEASE</spring.version>
   </properties>
   <modules>
     <module>spring-cloud-huawei-dependencies</module>
@@ -91,6 +92,16 @@
         <groupId>com.huawei.paas.cse</groupId>
         <artifactId>foundation-auth</artifactId>
         <version>${cse-dependency.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
