--- a/spring-cloud-huawei-dtm/pom.xml
+++ b/spring-cloud-huawei-dtm/pom.xml
@@ -12,12 +12,10 @@
   <artifactId>spring-cloud-huawei-dtm</artifactId>
 
   <properties>
-    <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-    <httpclient.version>4.5.9</httpclient.version>
-    <jackson-databind.version>2.9.9.2</jackson-databind.version>
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
+    <dtm-client.version>1.0.2</dtm-client.version>
+    <feign-core.version>10.2.3</feign-core.version>
   </properties>
 
   <dependencies>
@@ -32,12 +30,7 @@
     <dependency>
       <groupId>com.huawei.paas.dtm</groupId>
       <artifactId>dtm-client</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.huawei.paas.dtm</groupId>
-      <artifactId>dtm-client-servicecomb</artifactId>
-      <version>1.0.2</version>
+      <version>${dtm-client.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -46,7 +39,15 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>5.1.8.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-core</artifactId>
+      <version>${feign-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
     </dependency>
   </dependencies>
 </project>
