update doc and example

--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -13,10 +13,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>price-provider</module>
-    <module>order-consumer</module>
-    <module>product-consumer-feign</module>
     <module>dtm-demo</module>
+    <module>discovery-demo</module>
   </modules>
 
 </project>
