--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <module>spring-cloud-huawei-sample</module>
     <module>spring-cloud-starter-huawei</module>
     <module>spring-cloud-huawei-dtm</module>
+    <module>spring-cloud-huawei-canary</module>
   </modules>
 
 
