--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <junit.version>4.12</junit.version>
     <cse-dependency.version>2.3.69</cse-dependency.version>
     <spring.version>5.1.8.RELEASE</spring.version>
+    <snakeyaml.version>1.24</snakeyaml.version>
   </properties>
   <modules>
     <module>spring-cloud-huawei-dependencies</module>
@@ -48,11 +49,17 @@
     <module>spring-cloud-huawei-sample</module>
     <module>spring-cloud-starter-huawei</module>
     <module>spring-cloud-huawei-dtm</module>
+    <module>spring-cloud-huawei-canary</module>
   </modules>
 
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
