--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>spring-cloud-starter-huawei-servicecomb-discovery</module>
     <module>spring-cloud-starter-huawei-dtm</module>
+      <module>spring-cloud-starter-huawei-canary</module>
   </modules>
 
 </project>
