--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <module>spring-cloud-starter-huawei</module>
     <module>spring-cloud-huawei-dtm</module>
     <module>spring-cloud-huawei-canary</module>
+    <module>spring-cloud-huawei-config</module>
   </modules>
 
 
