--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -44,6 +44,11 @@
         <artifactId>spring-cloud-starter-huawei-canary</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-huawei-config</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
