--- a/spring-cloud-huawei-sample/dtm-demo/reserve-feign/pom.xml
+++ b/spring-cloud-huawei-sample/dtm-demo/reserve-feign/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>reserve</artifactId>
+  <artifactId>reserve-feign</artifactId>
 
   <dependencies>
     <dependency>
@@ -56,9 +56,8 @@
       <artifactId>netflix-commons-util</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.netflix.netflix-commons</groupId>
-      <artifactId>netflix-statistics</artifactId>
-      <version>0.2.0</version>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
   </dependencies>
   <build>
@@ -82,7 +81,7 @@
           </descriptors>
           <archive>
             <manifest>
-              <mainClass>org.springframework.cloud.sample.org.springframework.cloud.sample.dtm.ReserveAppMain
+              <mainClass>org.springframework.cloud.sample.org.springframework.cloud.sample.dtm.ReserveFeignAppMain
               </mainClass>
             </manifest>
           </archive>
