modify sample structure

--- a/spring-cloud-huawei-sample/discovery-demo/order-consumer/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/order-consumer/pom.xml
@@ -19,7 +19,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <artifactId>discovery-demo</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
