--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
@@ -19,7 +19,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <artifactId>discovery-demo</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -30,7 +30,6 @@
   <properties>
     <java.version>1.8</java.version>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
