add config and modify dtm-demo structure

--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -6,7 +6,6 @@
     <artifactId>spring-cloud-dependencies-parent</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>2.1.6.RELEASE</version>
-    <relativePath/>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -42,6 +41,11 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-huawei-canary</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-huawei-config</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
