--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-build</artifactId>
     <version>2.1.6.RELEASE</version>
-    <relativePath/>
   </parent>
   <groupId>org.springframework.cloud</groupId>
   <artifactId>spring-cloud-huawei</artifactId>
@@ -49,6 +48,7 @@
     <module>spring-cloud-starter-huawei</module>
     <module>spring-cloud-huawei-dtm</module>
     <module>spring-cloud-huawei-canary</module>
+    <module>spring-cloud-huawei-config</module>
   </modules>
 
 
