--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
@@ -19,7 +19,7 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <artifactId>discovery-demo</artifactId>
     <groupId>org.springframework.cloud</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -29,8 +29,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <properties>
     <java.version>1.8</java.version>
+    <cse.version>2.3.69</cse.version>
   </properties>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.huawei.paas.cse</groupId>
+        <artifactId>cse-dependency</artifactId>
+        <version>${cse.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -53,6 +64,16 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.servicecomb</groupId>
+      <artifactId>config-cc</artifactId>
+      <version>1.3.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <version>2.1.2.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
