--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -3,9 +3,9 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spring-cloud-huawei</artifactId>
     <groupId>org.springframework.cloud</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>spring-cloud-build</artifactId>
+    <version>2.1.6.RELEASE</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.cloud</groupId>
@@ -16,5 +16,4 @@
     <module>dtm-demo</module>
     <module>discovery-demo</module>
   </modules>
-
 </project>
