--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -29,9 +29,6 @@
   <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
   <name>Spring Cloud Huawei servicecomb Discovery</name>
 
-  <properties>
-    <servicecomb.version>1.2.1</servicecomb.version>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -55,19 +52,6 @@
       <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.huawei.paas.cse</groupId>
-      <artifactId>foundation-auth</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.servicecomb</groupId>
-      <artifactId>foundation-common</artifactId>
-      <version>${servicecomb.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.jmockit</groupId>
       <artifactId>jmockit</artifactId>
       <scope>test</scope>
@@ -81,6 +65,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-huawei-common</artifactId>
     </dependency>
   </dependencies>
 </project>
