--- a/spring-cloud-huawei-sample/discovery-demo/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/pom.xml
@@ -13,6 +13,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>price-provider</module>
+    <module>price-provider-canary</module>
     <module>order-consumer</module>
     <module>product-consumer-feign</module>
   </modules>
