--- a/spring-cloud-huawei-sample/discovery-demo/price-provider-canary/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider-canary/pom.xml
@@ -25,11 +25,12 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>order-consumer</artifactId>
+  <artifactId>price-provider-canary</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
     <java.version>1.8</java.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -41,6 +42,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-commons</artifactId>
       <version>2.1.2.RELEASE</version>
@@ -48,10 +53,6 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-huawei-canary</artifactId>
     </dependency>
   </dependencies>
 </project>
