--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-canary/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-canary/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-cloud-starter-huawei-canary</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-huawei-canary-client</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
