--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -15,5 +15,6 @@
   <modules>
     <module>dtm-demo</module>
     <module>discovery-demo</module>
+    <module>config-demo</module>
   </modules>
 </project>
