canary:  support feign now  add canary demo module doc:  add version rule
(cherry picked from commit a98c7c8a811abb97736e494a75a41a904dffcc60)

--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -16,5 +16,6 @@
     <module>dtm-demo</module>
     <module>discovery-demo</module>
     <module>config-demo</module>
+    <module>canary-demo</module>
   </modules>
 </project>
