--- a/spring-cloud-huawei-canary-client/pom.xml
+++ b/spring-cloud-huawei-canary-client/pom.xml
@@ -64,5 +64,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-huawei-canary-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
